fixed alignment

--- a/theme.css
+++ b/theme.css
@@ -19,18 +19,24 @@ body {
     height: 80%;
 }
 
+#navbar {
+	display: flex;
+	justify-content: center;
+	width: 100%;
+}
+
 #navbar ul {
 	list-style-type: none;
-	text-align: center;
 	position: relative;
+	padding-left: 0;
 }
 
 #navbar li {
 	font-family: Open Sans Condensed, sans-serif;
 	text-transform: uppercase;
 	display: inline-block;
-	padding-left: 2em;
-	padding-right: 2em;
+	margin-left: 1em;
+	margin-right: 1em;
 	vertical-align: middle;
 	font-size: 180%;
 }
@@ -60,6 +66,10 @@ body {
   visibility: visible;
   -webkit-transform: scaleX(1);
   transform: scaleX(1);
+}
+
+li.navbutton {
+	width: 4em;
 }
 
 #news {
@@ -116,9 +126,26 @@ body {
 #some li {
 	display: inline-block;
 	margin-left: 0;
-	padding-left: 0;
+	padding: 0 1em;
 }
 
-#some p {
-	margin-top: 0;
+#some a.hvr-float {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+#some a.hvr-float:hover, .hvr-float:focus, .hvr-float:active {
+  -webkit-transform: translateY(-8px);
+  transform: translateY(-8px);
 }
